# multiprecision

./: .appveyor.yml  .azure-pipelines.yml  .clang-format  .codecov.yml  .drone.star  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines-win.bat  build.jam  dummy.cpp  roundtrip.cpp  test_double_float_io.cpp
.circleci/: config.yml
.drone/: boost.sh
cmake/modules/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/modules/doc/: Makefile  conf.py  index.rst  make.bat  requirements.txt
cmake/modules/doc/src/: Building.rst  CMDeploy.rst  CMExport.rst  CMIgnorePackage.rst  CMInstallTargets.rst  CMPkgConfig.rst  CMProperties.rst  CMSetupVersion.rst  CMTest.rst  Intro.rst  Modules.rst
cmake/modules/share/modules/cmake/: CMConfig.cmake  CMDeploy.cmake  CMExport.cmake  CMFuture.cmake  CMIgnorePackage.cmake  CMInstallTargets.cmake  CMPkgConfig.cmake  CMProperties.cmake  CMSetupVersion.cmake  CMTest.cmake  CMToSnakeCase.cmake  version.hpp
cmake/modules/test/: CMakeLists.txt  test.cmake
cmake/modules/test/basicapp/: CMakeLists.txt  main.cpp
cmake/modules/test/checkprop/: CMakeLists.txt
cmake/modules/test/fail/: simple-test.cmake
cmake/modules/test/findpackagecheck/: CMakeLists.txt  main.cpp.in
cmake/modules/test/libbasic/: CMakeLists.txt  main.cpp
cmake/modules/test/libbasicnamespace/: CMakeLists.txt  main.cpp
cmake/modules/test/libsimple/: CMakeLists.txt  compiletestwillfail.cpp  testwillfail.cpp
cmake/modules/test/libsimple/include/: simple.h
cmake/modules/test/libsimplecustomname/: CMakeLists.txt  compiletest.cpp  test.cpp
cmake/modules/test/libsimplenamespace/: CMakeLists.txt
cmake/modules/test/libsimplenamespace/include/: simple.h
cmake/modules/test/parseversion/: CMakeLists.txt
cmake/modules/test/parseversion/include/: simple.h  version.h
cmake/modules/test/pass/: basic.cmake  defaultproperties.cmake  parseversion.cmake  properties.cmake  simple-shared.cmake  simple-test-build.cmake  simple-test-shared.cmake  simple-test.cmake  simple.cmake  simplecustomname.cmake  simplenamespace.cmake  superproject.cmake
cmake/modules/test/pkgconfigcheck/: CMakeLists.txt
cmake/modules/test/properties/: CMakeLists.txt  nowarnings.cpp  rtti.cpp  throw.cpp  warnings.cpp
cmake/modules/test/properties/include/: simple.h
cmake/modules/test/simpletest/: CMakeLists.txt  simple.cpp
cmake/modules/test/simpletest/include/: simple.h
cmake/modules/test/simpletest/test/: CMakeLists.txt
cmake/modules/test/superproject/: CMakeLists.txt
config/: Jamfile.v2  has_basic_float128.cpp  has_constexpr_dynamic_memory.cpp  has_constexpr_limits_cmd.cpp  has_e_float.cpp  has_float128.cpp  has_gmp.cpp  has_is_constant_evaluated.cpp  has_mpc.cpp  has_mpfi.cpp  has_mpfr.cpp  has_qd.cpp  is_ci_sanitizer_run.cpp
doc/: Jamfile.v2  history.qbk  index.idx  introduction.qbk  multiprecision.css  multiprecision.qbk  performance.qbk  performance_integer_real_world.qbk  performance_overhead.qbk  performance_rational_real_world.qbk  performance_real_world.qbk  reference.qbk  reference_backend_requirements.qbk  reference_cpp_bin_float.qbk  reference_cpp_dec_float.qbk  reference_cpp_double_fp_backend.qbk  reference_cpp_int.qbk  reference_gmp_float.qbk  reference_gmp_int.qbk  (+54 more)
test/: CMakeLists.txt  Jamfile.v2  Simple_Jamfile  big_number_concept_check.cpp  boost_math_issue_1131.cpp  bug11922.cpp  bug12039.cpp  constexpr_arithmetric_test.hpp  constexpr_test_arithmetic_backend.cpp  constexpr_test_cpp_int.cpp  constexpr_test_cpp_int_2.cpp  constexpr_test_cpp_int_3.cpp  constexpr_test_cpp_int_5.cpp  constexpr_test_cpp_int_6.cpp  constexpr_test_cpp_int_7.cpp  constexpr_test_dynamic_cpp_int.hpp  constexpr_test_dynamic_cpp_int_1.cpp  constexpr_test_dynamic_cpp_int_2.cpp  constexpr_test_float128.cpp  cpp_double_float_tests.txt  cpp_int_constexpr_arithmetic.cpp  double_float_basic_ops_test.cpp  double_float_basic_test.cpp  eigen.hpp  error.txt  git_issue_167.cpp  git_issue_175.cpp  git_issue_30.cpp  git_issue_368.cpp  git_issue_464.cpp  git_issue_488.cpp  git_issue_499.cpp  git_issue_506.cpp  git_issue_509.cpp  git_issue_526.cpp  git_issue_541.cpp  git_issue_573.cpp  git_issue_576.cpp  git_issue_595.cpp  git_issue_604.cpp  (+251 more)
test/compile_fail/: conv_fail_18.cpp  conv_fail_20.cpp  conv_fail_21.cpp  conv_fail_22.cpp  conv_fail_23.cpp  conv_fail_24.cpp  conv_fail_25.cpp  conv_fail_26.cpp  conv_fail_27.cpp  conv_fail_28.cpp  operator_fail_01.cpp
test/concepts/: mp_number_concept_check.cpp  number_concept_check.cpp  sf_concept_check_basic.cpp  sf_concept_check_bessel.cpp  sf_concept_check_beta.cpp  sf_concept_check_beta_2.cpp  sf_concept_check_beta_3.cpp  sf_concept_check_elliptic.cpp  sf_concept_check_gamma.cpp  sf_concept_check_poly.cpp
test/coverage/: Makefile
test/include_test/: cpp_int_include_test.cpp
test/math/: log1p_expm1_test.cpp  powm1_sqrtp1m1_test.cpp  setup.hpp  table_type.hpp  test_2F0.cpp  test_bessel_i.cpp  test_bessel_j.cpp  test_bessel_k.cpp  test_bessel_y.cpp  test_beta.cpp  test_binomial_coeff.cpp  test_carlson.cpp  test_carlson_1.cpp  test_carlson_2.cpp  test_carlson_3.cpp  test_carlson_4.cpp  test_cbrt.cpp  test_digamma.cpp  test_ellint_1.cpp  test_ellint_2.cpp  test_ellint_3.cpp  test_erf.cpp  test_expint.cpp  test_gamma.cpp  test_hermite.cpp  test_ibeta.cpp  test_ibeta_2.cpp  test_ibeta_3.cpp  test_ibeta_4.cpp  test_ibeta_inv_1.cpp  test_ibeta_inv_ab_4.cpp  test_igamma.cpp  test_igamma_inv.cpp  test_igamma_inva.cpp  test_laguerre.cpp  test_legendre.cpp  test_tgamma_ratio.cpp  test_zeta.cpp
test/math/high_prec/: gamma.ipp  gamma_0.ipp  gamma_1_2.ipp  gamma_neg.ipp  test_gamma.cpp  test_gamma.hpp
test/math/instances/: Jamfile.v2
test/ublas_interop/: test1.cpp  test1.hpp  test11.cpp  test12.cpp  test13.cpp  test2.cpp  test2.hpp  test21.cpp  test22.cpp  test23.cpp  test3.cpp  test3.hpp  test31.cpp  test32.cpp  test33.cpp  test4.cpp  test4.hpp  test42.cpp  test43.cpp  test5.cpp  test5.hpp  test52.cpp  test53.cpp  test6.cpp  test6.hpp  test62.cpp  test63.cpp  test7.cpp  test7.hpp  test71.cpp  test72.cpp  test73.cpp
(+572 files in other folders)
